Alex krasn/fix confidence level bar styles (#657)
* fix: zoomIn keyboar shortcut for macOS

* fix: appId

* fix: align conf level with tag name, overlaps with command bar, font size etc

--- a/src/react/components/common/tagInput/tagInput.scss
+++ b/src/react/components/common/tagInput/tagInput.scss
@@ -43,10 +43,12 @@
                     content: " ";
                     display: inline-block;
                     position: absolute;
-                    width: 80px;
-                    height: 100%;
-                    left: -80px;
-                    background: linear-gradient(to right, #00000000 0%,#000000 100%);
+                    top: 44px;
+                    width: 50px;
+                    height: calc(100% - 44px);
+                    left: -55px;
+                    margin-right: 4px;
+                    background: linear-gradient(to right, #00000000 10%,#00000080 80%);
                 }
 
             };
@@ -93,14 +95,17 @@
         &-2 {
             width: 100%;
         }
-        .tag-item-confidence{
+        .tag-item-confidence {
             position: absolute;
-            line-height: 2em;
-            left: -70PX;
+            min-height: 1.8em;
+            left: -58px;
+            font-size: small;
+            vertical-align: middle;
+            padding-top: 3px;
             z-index: 900;
             text-align: right;
-            width:50px;
-            text-shadow: 1px 1px 1px #333;
+            width: 50px;
+            text-shadow: 1px 1px 1px rgba(51, 51, 51, 0.653);
         }
     }
 
